<resources>
    <string name="app_name">Movie Portal</string>
    <string name="movie_name">Interestelar</string>
    <string name="adult_movie">-18</string>
    <string name="release_year">2014</string>
    <string name="duration_movie">145min</string>
    <string name="genre_movie">Science Fiction</string>
    <string name="overview_movie">As reservas naturais da Terra estão chegando ao fim e um grupo de astronautas recebe a missão de verificar possíveis planetas para receberem a população mundial, possibilitaAs reservas naturais da Terra estão chegando ao fim e um grupo de astronautas recebe a missão de verificar possíveis planetas para receberem a população mundial, possibilitaAs reservas naturais da Terra estão chegando ao fim e um grupo de astronautas recebe a missão de verificar possíveis planetas para receberem a população mundial, possibilitaAs reservas naturais da Terra estão chegando ao fim e um grupo de astronautas recebe a missão de verificar possíveis planetas para receberem a população mundial, possibilitaAs reservas naturais da Terra estão chegando ao fim e um grupo de astronautas recebe a missão de verificar possíveis planetas para receberem a população mundial, possibilitaAs reservas naturais da Terra estão chegando ao fim e um grupo de astronautas recebe a missão de verificar possíveis planetas para receberem a população mundial, possibilitando a continuação da espécie. Cooper é chamado para liderar o grupo e aceita a missão sabendo que pode nunca mais ver os filhos. Ao lado de Brand, Jenkins e Doyle, ele seguirá em busca de um novo lar.</string>
    <string name="btn_popular">Popular</string>
    <string name="btn_favorite">Favorites</string>
    <string name="btn_see_more">See more</string>
    <string name="btn_back">Back</string>
    <string name="btn_top">Top Rated</string>
    <string name="btn_upcoming">Upcoming</string>
    <string name="btn_latest">Latest</string>
    <string name="title_upcoming">Upcoming Movies</string>
    <string name="title_top">Top Rated Movies</string>
    <string name="title_popular">Popular Movies</string>
    <string name="vote_count">22162</string>
    <string name="search_view_text">Pesquisar um filme</string>
    <string name="warning_text_favorites">"You still don't have favorites."</string>
</resources>