<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".view.activity.MainActivity"
    android:background="@drawable/ic_baseline_local_movies_24" >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:background="@drawable/gradient_main" >

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textStyle="bold"
            android:drawableStart="@drawable/ic_baseline_local_movies_24"
            android:text="@string/app_name"
            android:textColor="@color/black"
            android:textSize="32sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_favorite"
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="10dp"
            android:background="@color/dark_red"
            android:foreground="@drawable/gradient_btn_main"
            android:text="@string/btn_favorite"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/btn_popular"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/app_name" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_popular"
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:layout_marginBottom="10dp"
            android:background="@color/blue"
            android:foreground="@drawable/gradient_btn_main"
            android:text="@string/btn_popular"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/btn_top"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_favorite" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_top"
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:layout_marginBottom="500dp"
            android:background="@color/dark_yellow"
            android:foreground="@drawable/gradient_btn_main"
            android:text="@string/btn_top"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/btn_upcoming"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_popular" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_upcoming"
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:layout_marginTop="10dp"
            android:background="@color/dark_grey"
            android:foreground="@drawable/gradient_btn_main"
            android:text="@string/btn_upcoming"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_top" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>